--- a/project_front/src/app/search.component.html
+++ b/project_front/src/app/search.component.html
@@ -21,9 +21,10 @@
                           <option value="rack">Rack</option>
                           <option value="row">Row</option>
                           <option value="column">Column</option>
-                          <option value="name">Name</option>
-                          <option value="desc">Description</option>
-                            <option value="reorder">Reorder</option>
+                          <option value="name">Stock Name</option>
+                          <option value="desc"> Stock Description</option>
+                          <option value="reorder">Reorder</option>
+                          <option value="max">Max Stock</option>
                           <option value="all">All</option>    
                   </select>
               </div>
