Added title and fixed some spelling errors

--- a/project_front/src/app/home.component.html
+++ b/project_front/src/app/home.component.html
@@ -9,7 +9,7 @@
             <div class="card" style = "width: 40%; margin: auto" 
                 style="cursor: pointer" >
                 <div class="card-header">
-                    <h4 class="col-12" style="text-align:center">Welcome to Convayor Tek Stock Managment</h4>
+                    <h4 class="col-12" style="text-align:center">Welcome to Conveyortek Stock Managment</h4>
                 </div>
                 <div class="card-body" style="background-color: #185c9b; color: white;">
                         <div class="row">
