--- a/project_front/src/app/stockdetails.component.html
+++ b/project_front/src/app/stockdetails.component.html
@@ -19,7 +19,7 @@
                                 <div class="col-6"><button class="btn btn-primary" [routerLink]="['/stockdetails', details._id]" matTooltip="Go to this stock details page"
                                     aria-label="Button that leads to the current stock details page" matTooltipPosition="above">Get Stock Details</button></div>
                                 <div class="col-6"><button class="btn btn-primary"(click)="DownloadQR(details._id)"
-                                    aria-label="Button that leads to the current stocks details page" matTooltipPosition="above"matTooltip="Download the QR code">Download QR Code</button></div>
+                                    aria-label="Button that downloads the QR code" matTooltipPosition="above"matTooltip="Download the QR code">Download QR Code</button></div>
                             </div>
                         </div>
                         <div class="card-body" style="background-color: #185c9b; color: white;">
