Fixed text bug and removed file

--- a/project_front/src/app/home.component.html
+++ b/project_front/src/app/home.component.html
@@ -64,7 +64,7 @@
                                 <pagination-controls id="amountPId" (pageChange)="amountPage = $event"></pagination-controls>
                         </ng-container>
                         <ng-template #noAmountView>
-                            <h5 style="text-align:center">No Stock Over Max</h5>
+                            <h5 style="text-align:center">No Stock</h5>
                         </ng-template>
                           </div>
                     </div>
